Declare dependency on Harlequin

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ classifiers = [
 ]
 dependencies = [
   "Django>=3.2",
+  "harlequin",
 ]
 [project.urls]
 Changelog = "https://github.com/adamchainz/django-harlequin/blob/main/CHANGELOG.rst"
