--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,11 +8,10 @@ requires = [
 name = "django-harlequin"
 version = "1.1.2"
 description = "Launch Harlequin, the SQL IDE for your Terminal, with your Django database configuration."
-readme = { file = "README.rst", content-type = "text/x-rst" }
+readme = "README.rst"
 keywords = [
   "Django",
 ]
-license = { text = "MIT" }
 authors = [
   { name = "Adam Johnson", email = "me@adamj.eu" },
 ]
