--- a/tests/requirements/requirements.in
+++ b/tests/requirements/requirements.in
@@ -1,7 +1,8 @@
 coverage[toml]
 django
 mysqlclient
-psycopg2-binary
+psycopg2-binary ; python_version < '3.12'
+psycopg ; python_version >= '3.12'
 pytest
 pytest-django
 pytest-randomly
